# lingxi

./: .gitignore  README.md  code.txt  contacts.json
isi/: DATABASE_COMPLETE_GUIDE.md  MODELS_AND_MAPPERS_README.md  README.md  THESIS_STRUCTURE_EXPLANATION.md  pom.xml  test.txt  thesis-paper.md  张家界学院本科毕业论文模板.md
isi-agent/: .dockerignore  DEPLOY.md  Dockerfile  deploy.bat  deploy.sh  docker-compose.yml  main.py  pyproject.toml
isi-agent/isi_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
isi-web/: .env.development  .env.production  package.json  vite.config.js
isi-web/src/: main.js
isi-web/src/api/: login.js
isi-web/src/api/interview/: resume.js  session.js  template.js  voice.js
isi-web/src/api/system/: user.js
isi-web/src/assets/styles/: variables.module.scss
isi-web/src/store/modules/: permission.js  user.js
isi-web/src/utils/: audioUtils.js  dict.js  request.js
isi-web/src/views/: index.vue  login.vue
isi/src/main/resources/: application.yaml  password-keys.properties.example
mcp-stores/MailMcpClient/: pom.xml
mcp-stores/MailMcpServer/: contacts.json  pom.xml
scs/: HELP.md  pom.xml
scs-agent/: pom.xml
scs-agent/src/main/resources/: application.yaml
seo/: NGINX_SEO_USAGE.md  NGINX_SYNC_README.md  QUICK_START.md  deploy-nginx-config.sh  nginx-rewrite-example.conf  pom.xml
seo-web/: .env.development  .env.staging  package.json  vite.config.js
seo-web/src/: permission.js
seo-web/src/api/: login.js
seo-web/src/router/: index.js
seo-web/src/utils/: request.js
seo-web/src/views/: login.vue  register.vue
(+510 files in other folders)
