[project]
name = "isi-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "pypdf>=3.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]
